tests/out/error/fun/param_redefine.out
tests/out/error/fun/param_redefine.in.bt:2:5 error: redefinition of p
